--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:LightPink;">
+<body style="background-color:DimGray;">
 
 <h1>Hello World</h1>
 
