--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body style="background-color:DimGray;">
 
-<h1>Hello World</h1>
+<p style="background-color:black;color:white;">Hello World</p>
 
 </body>
 </html>
+
+
