--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:DimGray;">
 
-<p style="background-color:black;color:white;">Hello World</p>
+<p style="Font-family:calibri;Font-size:40px;color:white;">Hello World</p>
 
 </body>
 </html>
