--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+  
+.p1 {
+Font-family: "Lucida Console", monospace;
+Font-size:40px;
+color:white;
+}
+
+
+</style>
+</head>
+</body>
+
 <body style="background-color:DimGray;">
-
-<p style="Font-family:calibri;Font-size:40px;color:white;">Hello World</p>
-
+  
+<p class="p1">Hello World</p>  
+  
 </body>
 </html>
 
