--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
   
 .p1 {
-Font-family: "Comic sans MS;
+Font-family: "Poppins", sans-serif;
 Font-size:40px;
 color:white;
 }
@@ -15,7 +15,7 @@ color:white;
 
 <body style="background-color:DimGray;">
   
-<p class="p1">Beatmap Pack #1108</p>  
+<p class="p1">#1108</p>  
   
 </body>
 </html>
