--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@ Font-family: "Poppins", sans-serif;
 Font-size:40px;
 color:white;
 }
+  
+.p2 {
+Font-family: "Poppins", sans-serif;
+Font-size:20px;
+color:white;
+}
 
 
 </style>
@@ -15,7 +21,8 @@ color:white;
 
 <body style="background-color:DimGray;">
   
-<p class="p1">BP #1108</p>  
+<p class="p1">BP #1108</p>
+<p class="p2">completed</p>
   
 </body>
 </html>
